fix BossbarManager nasral......